<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/dp_20">

        <ImageView
            android:layout_width="@dimen/dp_70"
            android:layout_height="@dimen/dp_70"
            android:layout_margin="@dimen/dp_30"
            android:contentDescription="@null"
            android:src="@mipmap/ic_launcher" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="@dimen/dp_20"
                android:paddingRight="@dimen/dp_20"
                android:text="@string/username"
                android:textSize="@dimen/sp_16" />

            <EditText
                android:id="@+id/et_username"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:background="@null"
                android:hint="@string/hint_username"
                android:inputType="number"
                android:maxLines="1"
                android:padding="@dimen/dp_8"
                android:text="2222222" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="@dimen/dp_20"
                android:paddingRight="@dimen/dp_20"
                android:text="@string/password"
                android:textSize="@dimen/sp_16" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:background="@null"
                android:hint="@string/hint_password"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLines="1"
                android:padding="@dimen/dp_8"
                android:text="2222222" />

        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_60"
        android:layout_margin="@dimen/dp_10"
        android:alpha="0.8"
        android:backgroundTint="@color/colorPrimary"
        android:paddingLeft="@dimen/dp_80"
        android:paddingRight="@dimen/dp_80"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp_15"
        app:cornerRadius="@dimen/dp_26"
        app:layout_constraintBottom_toTopOf="@+id/ll_agreement"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/ll_agreement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/dp_50"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/cb_service_agreement"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:textSize="@dimen/sp_14" />

        <TextView
            android:id="@+id/tv_service_agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="登录即表示同意"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/sp_14" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>